Bug 30207 - Doesn't stop listening to MCE state change notifications after stream errors
Summary: Doesn't stop listening to MCE state change notifications after stream errors
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: 0.10
Hardware: Other All
: medium normal
Assignee: Will Thompson
QA Contact: Telepathy bugs list
URL: http://git.collabora.co.uk/?p=user/wj...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2010-09-15 02:42 UTC by Will Thompson
Modified: 2010-09-15 03:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Will Thompson 2010-09-15 02:42:13 UTC
Gabble only stops listening to MCE if the connection is cleanly disconnected. If it encounters a stream error, the next MCE state change yields the following crash:

3  IA__g_assertion_message_expr (..., expr=0xf91e8 "GABBLE_IS_CONNECTION (conn)")
4  _gabble_connection_send_with_reply (...) at connection.c:1426
5  conn_slacker_send_command (conn=0x165008) at conn-slacker.c:41
[ emission of GabbleSlacker:inactivity-changed ]
11  slacker_message_filter (message=0x1b9a78) at slacker.c:133

Patch incoming.
Comment 1 Simon McVittie 2010-09-15 03:09:28 UTC
r+, good catch.
Comment 2 Will Thompson 2010-09-15 03:36:16 UTC
Merged, thanks; will be in 0.9.19 (which might turn out to be 0.10.0?)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.